add differentiation between active and owner add collapsed view
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1545,16 +1545,21 @@
         "asset_settle": "Request a settlement of {amount} for {account}",
         "asset_update": "Update the asset {asset} using the account {account}",
         "call_order_update": "Change {account} {debtSymbol} debt by {debt} and collateral by {collateral}",
+        "changes_to_active": "Changes to active",
+        "changes_to_owner": "Changes to owner",
         "committee_member_update_global_parameters": "Update committee global parameters by {account}",
         "delete": "Permanently reject",
-        "danger_operation": "Dangerous operation!",
+        "danger_operation": "Dangerous operation",
+        "set_threshold": "Set threshold to %(threshold)s",
+        "add": "Add",
+        "remove": "Remove",
         "expires": "Expires",
         "feed_producer": "Update the feed producers for the asset {asset} using the account {account}",
         "limit_order_buy": "Place an order to buy {amount} at {price} for {account}",
         "limit_order_create": "Place an order to buy %(buy_amount)s for %(sell_amount)s for %(account)s",
         "limit_order_sell": "Place an order to sell {amount} at {price} for {account}",
         "override_transfer": "Transfer {amount} from {from} to {to} by authority of {issuer}",
-        "public_key": "Key changes",
+        "permission_changes": "Permission changes",
         "proposals": "Proposals",
         "reject": "Reject",
         "status": "Status",
