fix visualization of votes
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1553,12 +1553,15 @@
         "call_order_update": "Change {account} {debtSymbol} debt by {debt} and collateral by {collateral}",
         "changes_to_active": "Changes to active",
         "changes_to_owner": "Changes to owner",
+        "changes_to_memo": "Changes to memo",
         "committee_member_update_global_parameters": "Update committee global parameters by {account}",
         "delete": "Permanently reject",
         "danger_operation": "Dangerous operation",
         "set_threshold": "Set threshold to %(threshold)s",
         "add": "Add",
         "remove": "Remove",
+        "add_vote": "Add vote for",
+        "remove_vote": "Remove vote for",
         "expires": "Expires",
         "feed_producer": "Update the feed producers for the asset {asset} using the account {account}",
         "limit_order_buy": "Place an order to buy {amount} at {price} for {account}",
