--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -25,6 +25,7 @@
         "deposit": "Depositar BTS",
         "deposit_address": "Su dirección de depósito es su nombre de cuenta",
         "deposit_withdraw": "Depositar/Retirar",
+        "download_history": "Download History",
         "eq_value": "Estimada",
         "eq_value_header": "Valor ({asset})",
         "errors": {
@@ -37,6 +38,13 @@
         "estimate_value": "Valor estimado de la cuenta",
         "existing_accounts": "Cuentas Existentes",
         "existing_user": "Usuario existente",
+        "export_modal": {
+            "coinbase_report": "CoinTracking.info Report",
+            "description": "Enter your desired elastic search instance and click the report type",
+            "full_report": "Full Report",
+            "title": "History Export",
+            "use_custom": "Use custom wrapper"
+        },
         "filter_orders": "Filter",
         "follow": "Agregar contacto",
         "group_by_asset": "Group by asset",
@@ -64,6 +72,7 @@
         "member": {
             "annual": "Suscriptor anual",
             "available": "Disponible para reclamar",
+            "balance_type": "Type",
             "basic": "Miembro básico",
             "cashback": "Reembolso",
             "claim": "Reclama ahora",
@@ -333,6 +342,7 @@
             "name": "Nombre",
             "new": "Propuesto(%(count)s)",
             "no_proxy": "Sin Apoderado",
+            "polls": "Polls(%(count)s)",
             "proxy": "Convertir en Apoderado de sus Votos a",
             "proxy_current": "Tu proxy actual es",
             "proxy_known": "O elige una cuenta como su proxy",
@@ -444,6 +454,8 @@
         "no_valid": "No hay feeds válidos para %(asset_symbol)s",
         "pay_max_debt": "Pagar la deuda máxima",
         "target_collateral_ratio": "Ratio de Colateral Objectivo",
+        "target_collateral_ratio_explanation": "When the position is being margin called, the corresponding order will be just big enough to bring the collateral ratio of the position greater or equal to the target collateral ratio",
+        "target_collateral_ratio_short": "TCR",
         "title": "%(asset_symbol)s Margen",
         "update": "Actualizar",
         "use_max": "Usar Max"
@@ -492,6 +504,7 @@
         "buy_sell": "Formulario de Pedido",
         "buysell_formatter": "{direction} {asset}",
         "call": "Precio de Rescate (Precio de la llamada)",
+        "cancel_selected_orders": "Cancel selected order(s)",
         "change": "cambio",
         "chart_height": "Altura de la gráficos (píxeles)",
         "chart_hide": "Ocultar gráficos",
@@ -1152,6 +1165,18 @@
         "update_asset": "Actualizar activo",
         "withdraw_legacy": " o Retiro de Legado"
     },
+    "htlc": {
+        "claim_period": "Seconds to claim",
+        "claim_period_due": "Claimable until",
+        "id": "HTLC id",
+        "preimage": "Preimage",
+        "preimage_explanation": "The secret preimage was used to calculate the preimage hash and is required to redeem this HTLC",
+        "preimage_hash": "Preimage hash",
+        "preimage_hash_explanation": "The preimage hash is calculated from the secret preimage and is imperative to HTLCs. With the secret preimage the HTLC can be redeemed. The content you see is: '(<preimage size>, <hash algorithm type>): <preimage hash>'",
+        "redeemer": "Redeemer",
+        "seconds_to_add": "Add seconds to claim period",
+        "update_issuer": "Update issuer"
+    },
     "icons": {
         "adjust": "Ajustar la posición del margen",
         "assets": "Activos",
@@ -1334,6 +1359,7 @@
             "close": "Cerrar",
             "header": "Depositar a %(account_name)s",
             "header_short": "Depositar",
+            "no_assets": "No depositable assets available",
             "submit": "Depositar"
         },
         "deposit_withdraw": {
@@ -1397,6 +1423,9 @@
         },
         "settle": {
             "amount": "Monto a liquidar",
+            "delay": "Estimated delay: %(amount)s hours",
+            "max_volume": "Max. settlement volume: %(amount)s %(asset)s",
+            "remaining_volume": "Remaining settleable volume: %(amount)s %(asset)s",
             "submit": "Liquidar activos",
             "title": "Solicitar la liquidación de %(asset)s"
         },
@@ -1413,6 +1442,7 @@
             "gateway_fee": "Cuota de Gateway",
             "header": "Retirar (beta)",
             "memo": "Memo",
+            "no_assets": "No withdrawable assets available",
             "no_estimate": "No hay presupuesto disponible para este objeto.",
             "no_gateways": "Lo sentimos, pero no hay puertas de enlace disponibles para manejar este retiro",
             "quantity": "Cantidad",
@@ -1484,6 +1514,11 @@
         "committee_member_update_global_parameters": "{account} actualizado los parámetros del comité global",
         "fill_order_buy": "{account} comprò {amount} a {price}",
         "fill_order_sell": "{account} vendido {amount} a {price}",
+        "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
+        "htlc_extend": "{update_issuer} added {seconds_to_add} seconds to redeem period of HTLC {htlc_id}",
+        "htlc_redeem": "{redeemer} request to redeem from HTLC {htlc_id}",
+        "htlc_redeemed": "{to} redeemed {amount} from HTLC {htlc_id} of {from}",
+        "htlc_refund": "{to} got refund of HTLC {htlc_id}",
         "lifetime_upgrade_account": "{account} se actualizó a miembro por vida",
         "limit_order_buy": "{account} colocado un orden de compra de {amount} a {price}",
         "limit_order_cancel": "{account} orden cancelada #%(order)s",
@@ -1522,6 +1557,8 @@
     },
     "proposal": {
         "action": "Acciones",
+        "add": "Add",
+        "add_vote": "Add vote for",
         "approve": "Aprobar",
         "approvers": "Approver(s)",
         "asset_create": "Crea el activo %(asset)s usando la cuenta {account}",
@@ -1530,7 +1567,11 @@
         "asset_settle": "Solicitar un acuerdo de",
         "asset_update": "Actualiza el activo {asset} usando la cuenta {account}",
         "call_order_update": "Cambia {account} {debtSymbol} deuda de {debt} y colateral por {collateral}",
+        "changes_to_active": "Changes to active",
+        "changes_to_memo": "Changes to memo",
+        "changes_to_owner": "Changes to owner",
         "committee_member_update_global_parameters": "Actualizar los parámetros globales del comité por {account}",
+        "danger_operation": "Dangerous operation",
         "delete": "Rechazar permanentemente",
         "expires": "Vence",
         "feed_producer": "Actualice los productores para el activo {asset} usando la cuenta {account}",
@@ -1538,8 +1579,12 @@
         "limit_order_create": "Poner orden para comprar %(buy_amount)s por %(sell_amount)s por %(account)s",
         "limit_order_sell": "Haga un pedido para vender {amount} a {price} por {account}",
         "override_transfer": "Transferir {amount} da {from} a {to}por autoridad de{issuer}",
+        "permission_changes": "Permission changes",
         "proposals": "Propuestas",
         "reject": "Rechazar",
+        "remove": "Remove",
+        "remove_vote": "Remove vote for",
+        "set_threshold": "Set threshold to %(threshold)s",
         "status": "Estado",
         "transfer": "Transferir {amount} da {from} a {to}",
         "update": {
@@ -1559,7 +1604,8 @@
             "owner_approvals_to_add": "Aprobación(es) de dueño añadido",
             "owner_approvals_to_remove": "Aprobación(es) de dueño eliminado"
         },
-        "vesting_balance_withdraw": "retirar {amount} desde la consolidación del saldo de {account}"
+        "vesting_balance_withdraw": "retirar {amount} desde la consolidación del saldo de {account}",
+        "votes": "Votes"
     },
     "proposal_create": {
         "expiration_time": "Tiempo de expiración",
@@ -1866,6 +1912,43 @@
             "update": " Actualizar",
             "update_mandate": "Actualizar la autorización existente"
         },
+        "htlc": {
+            "actions": "Actions",
+            "amount": "Amount",
+            "claim": "Claim",
+            "create_htlc": "Create HTLC",
+            "description": "A HTLC locks away funds for given recipient, who can redeem those funds by providing a secret preimage (password) that was used by the sender to create the contract. Disclosing the password happens off-chain.",
+            "enter_secret_preimage": "Enter secret preimage",
+            "expiration": "Expiration",
+            "expiration_date": "Expiration date",
+            "expiration_period": {
+                "one_day": "One day",
+                "one_week": "One week",
+                "two_days": "Two days"
+            },
+            "expires": "Expires",
+            "extend": "Extend",
+            "extend_htlc": "Extend HTLC",
+            "from": "From",
+            "hash": "Hash",
+            "preimage": "Preimage",
+            "preimage_has_been_created": "A random preimage has been created and filled in automatically below",
+            "recipient": "Recipient",
+            "redeem_htlc": "Redeem HTLC",
+            "sender": "Sender",
+            "size": "Size",
+            "title": "Hashed Time-Lock Contracts",
+            "to": "To",
+            "tooltip": {
+                "enter_preimage": "Enter the secret preimage that you have obtained from the sender",
+                "new_random": "Roll the dice and create a new random string.",
+                "preimage_button": "Please click to enter secret preimage",
+                "preimage_hash": "The Preimage hash is calculated from the above Preimage using the indicated hashing algorithm. Use the copy button in this row to save the Preimage hash and Preimage size.",
+                "preimage_input": "Field requires a secret preimage",
+                "preimage_random": "The best choice for the secret is a random string. If your secret can be guessed or is too short, you risk losing your funds. Use the copy button in this row to save the Preimage and hashing algorithm.",
+                "preimage_size": "The Preimage size is the length of the above Preimage. This value will also be written to the chain. Use the copy button in this row to save the Preimage hash and Preimage size."
+            }
+        },
         "paper_wallet": {
             "description": "Cree un PDF con las claves de su cuenta impresas (texto plano y código de barras). Si la cartera está desbloqueada, también se agregan las claves privadas.",
             "title": "Billetera de papel"
@@ -1954,6 +2037,7 @@
         "own_account": "Tienes llaves para esta cuenta",
         "propose_scam": "¡Esta propuesta fue creada por un estafador conocido, no la aprueba!",
         "propose_tip": "Proponer otro usuario para iniciar una transacción",
+        "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "Esta propuesta fue creada por o se dirige a una cuenta desconocida (no en contactos o lista blanca). Tenga cuidado con los intentos de estafa y revise cuidadosamente las operaciones contenidas.",
         "proxy_remove": "Tiene un conjunto de proxy, para eliminarlo, simplemente borre este campo de entrada",
         "proxy_search": "Busque una cuenta que se utilizará como su proxy para votar",
@@ -2014,6 +2098,7 @@
         "create_key": "Llave pública creada",
         "csv": "Exportar a .csv",
         "csv_tip": "Descargar el historial como separados por comas file .csv ",
+        "cumulative_borrow_amount": "Cumulative Debt",
         "custom": "Ha creado una operación personalizada",
         "delta_collateral": "Cambio  de collateral",
         "delta_debt": "Cambio de deuda",
@@ -2030,11 +2115,14 @@
             "_none": "Gratis",
             "basic_fee": "Comisiòn básica",
             "fee": "Cuota de transacción regular",
+            "fee_per_day": "Price per day",
+            "fee_per_kb": "Price per KByte Transaction Size",
             "long_symbol": " Símbolos mas largos",
             "membership_annual_fee": "Membresía anual",
             "membership_lifetime_fee": "Membresía de por vida",
             "premium_fee": "Comisiòn por nombres premium",
             "price_per_kbyte": "Precio por KByte Tamaño de la transacción",
+            "price_per_output": "Price per recipient",
             "symbol3": "Simbolos with 3 Caracteres",
             "symbol4": "Simbolos with 4 Caracteres"
         },
@@ -2098,6 +2186,11 @@
             "execute_bid": "Ejecutar puja",
             "fba_distribute": "Distribución de activos respaldados por honorarios",
             "fill_order": "Completar orden",
+            "htlc_create": "HTLC create",
+            "htlc_extend": "HTLC extend",
+            "htlc_redeem": "HTLC redeem",
+            "htlc_redeemed": "HTLC redeemed",
+            "htlc_refund": "HTLC refund",
             "limit_order_cancel": "Cancelar orden",
             "limit_order_create": "Publicar orden",
             "override_transfer": "Anular transferencia",
@@ -2162,6 +2255,7 @@
         "explict_price": "Precio explícito:",
         "fee": "Comisión",
         "final": "Balance final",
+        "free": "Free",
         "from": "Desde",
         "header": "Detalles de transferencia",
         "header_subheader": "Las transferencias se utilizan para enviar fondos a otros titulares de cuentas BitShares",
