honor the "view only mode" setting. Add new general setting.

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1748,6 +1748,7 @@
         "medium_latency": "Medium latency",
         "midnightTheme": "Midnight",
         "my_nodes": "Personal",
+        "viewOnlyMode": "View only mode",
         "no": "No",
         "no_accounts": "This local wallet does not contain any accounts.",
         "node_already_exists": "Node with such URL already exists",
