- Created AseertResolvePrediction component - Created method for AseertResolvePrediction in AssetActions

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -162,6 +162,7 @@
             "private": "Private key (WIF - Wallet Import Format)",
             "public": "Public key",
             "publish": "Save",
+            "publish_prediction": "Publish",
             "remove_proxy": "Remove proxy",
             "remove_text": "Remove",
             "reset": "Reset",
@@ -293,6 +294,8 @@
             "primary": "Primary settings",
             "quote": "Quote asset amount",
             "quote_name": "Quote asset",
+            "resolve_prediction": "Resolve prediction",
+            "resolve_prediction_text": "The asset prediction can be resolved here.",
             "short": "Short name (max 32 characters)",
             "symbol": "Symbol",
             "to": "Issue to account",
