--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2037,7 +2037,7 @@
                 "header":
                     "#FromJunetotheMoon - The CryptoBridge Trading Competition",
                 "intro":
-                    "This is the moment you’ve been waiting for: The full scoop on our trading competition! Find it on <a href=\"https://crypto-bridge.org/2019/05/31/the-countdown-begins-from-june-to-the-moon/\" target=\"_blank\">our website</a>, along with the <a href=\"https://crypto-bridge.org/terms-of-the-trading-competition/\" target=\"_blank\">terms and conditions</a>.",
+                    "This is the moment you’ve been waiting for: The full scoop on our trading competition! Find all about it along with the terms and conditions <a href=\"https://crypto-bridge.org/trading-competition/\" target=\"_blank\">on the website</a>.",
                 "leaderboard_title": "The Leader Board",
                 "leaderboard_body1":
                     "The CryptoBridge hall of fame is where the best traders leave their legacy. Are you one of them? Then you’re eligible to win prizes for holding one of the top three slots.",
@@ -2045,8 +2045,9 @@
                     "By the way: Do you like the leader board? Then make it your own and include it as a widget on your website or blog. You can also simply link it anywhere you like:",
                 "leaderboard_yourWidget": "Customize it now"
             },
-            "title": "You have won a reward in the trading competition.",
-            "description": "Description text....",
+            "title": "Congratulations, you have rewards to claim!",
+            "description":
+                "All prices are paid in BridgeCoin (BCO).\n\nUSD to BCO exchange rate is determined at the time of the payout using the exchange rate from coinmarketcap.com.\n\nFor more details, check out the <a href=\"https://crypto-bridge.org/trading-competition/\" target=\"_blank\">trading competition details</a>.",
             "disclaimer":
                 "Disclaimer: Claiming your stake after ending of staking period costs %(amount)s BCO in fees at this moment. The fees are subject to change.",
             "message": {
