Implement Ant Table

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -452,6 +452,8 @@
         "no_valid": "No valid feeds for %(asset_symbol)s",
         "pay_max_debt": "Pay Max Debt",
         "target_collateral_ratio": "Target Collateral Ratio",
+        "target_collateral_ratio_explanation": "When the position is being margin called, the corresponding order will be just big enough to bring the collateral ratio of the position greater or equal to the target collateral ratio",
+        "target_collateral_ratio_short": "TCR",
         "title": "%(asset_symbol)s Margin",
         "update": "Update",
         "use_max": "Use Max"
@@ -722,6 +724,7 @@
         },
         "asset": {
             "actions": "Asset actions",
+            "cumulative": "Cumulative",
             "collateral": {
                 "bid": "Bid Collateral",
                 "bid_price": "Bid price",
@@ -732,7 +735,12 @@
                 "bid": "Bid Price",
                 "collateral": "Additional Collateral",
                 "debt": "Debt Covered",
-                "title": "Collateral Bids"
+                "title": "Collateral Bids",
+                "included": {
+                    "yes": "Yes",
+                    "no": "No",
+                    "partial": "Partially"
+                }
             },
             "fee_pool": {
                 "claim_balance": "Claim fee pool balance",
@@ -752,7 +760,9 @@
             "info": "Asset info",
             "invalid": "The asset name %(name)s is invalid",
             "margin_positions": {
-                "title": "Margin positions"
+                "title": "Margin positions",
+                "ratio_warning": "Position is near MCR and in danger of being margin called",
+                "ratio_danger": "Position is below MCR and will be margin called"
             },
             "not_found": "The asset %(name)s does not exist",
             "permissions": {
